--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 Pillow==8.1.1
 pycparser==2.19
+python-dotenv==0.17.0
 pytz==2019.3
 six==1.12.0
 SQLAlchemy==1.3.10
